fix contact gap

--- a/media.css
+++ b/media.css
@@ -223,8 +223,8 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 30px;
-    border: 1px solid red;
-    gap: 100px;
+    /* border: 1px solid red; */
+    gap: 50px;
   }
 
   .contact-info {
